modified product. added datastore-indexes.xml