@@ -62,7 +62,7 @@
 			<groupId>com.google.appengine</groupId>
 			<artifactId>appengine-api-labs</artifactId>
 			<version>${gae.version}</version>
-			<scope>test</scope>
+			<!-- <scope>test</scope>  -->
 		</dependency>
 		<dependency>
 			<groupId>com.google.appengine</groupId>
@@ -171,7 +171,7 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
-					<excludedGroups>demo.IntegrationTests</excludedGroups>
+					<excludedGroups>demo.IntegrationTests, demo.LoadTests</excludedGroups>
 				</configuration>
 			</plugin>
             <plugin>
@@ -212,6 +212,7 @@
  						<!-- This doesn't work in cloud -->
 						<jvmFlag>-agentlib:jdwp=transport=dt_socket,address=5005,server=y,suspend=n</jvmFlag>
 						<jvmFlag>-Duser.timezone=UTC</jvmFlag>
+						<jvmFlag>-XX:MaxPermSize=300m</jvmFlag>
                 </jvmFlags>
                 </configuration>
                 <executions>
